# uibk_ades

./: ADESConfig.cmake.in  ADESConfigVersion.cmake.in  CMakeLists.txt  Doxyfile.in  Findlibimagine-ades.cmake  LibADESConfig.cmake.in  LibADESConfigVersion.cmake.in  README.md  adesdoc.config  doc.config  libadesConfig.cmake.in  libadesConfigVersion.cmake.in  package.xml
examples/: CMakeLists.txt  populating_ades.cpp  populating_db.cpp  save_load_ades.cpp
include/: libades.h
include/motions/: dmp.h  trajectory.h
include/storage/: adesdb.h
include/types/: ades.h  motion.h  motion_sequence.h  motion_sequence.h~  motion_type.h  motion_types.h~
include/utils/: serializable.h  serializable.h~
src/examples/: CMakeLists.txt
src/examples/src/: populating_ades.cpp  populating_db.cpp  save_load_ades.cpp
src/libades/: CMakeLists.txt  config.h.in
src/libades/include/motions/: dmp.h  unscrew.h
src/libades/include/storage/: adesdb.h
src/libades/include/types/: ades.h  motion_sequence.h  motion_type.h
src/libades/src/storage/: adesdb.cpp
src/libades/src/types/: motion_sequence.cpp  motion_type.cpp
src/storage/: adesdb.cpp
src/types/: ades.cpp  motion.cpp  motion_sequence.cpp  motion_type.cpp
srv/: ListNumAdes.srv
